--- a/0521_Assignment1_BMI 계산기/0521_Assignment1_BMI 계산기/Base.lproj/Main.storyboard
+++ b/0521_Assignment1_BMI 계산기/0521_Assignment1_BMI 계산기/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -101,7 +101,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vlf-SG-7dx">
-                                <rect key="frame" x="227" y="527" width="150" height="30"/>
+                                <rect key="frame" x="227" y="527" width="150" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="SY4-Qp-QXY"/>
                                 </constraints>
@@ -112,7 +112,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2wA-r9-u6S">
-                                <rect key="frame" x="16" y="597" width="361" height="50"/>
+                                <rect key="frame" x="16" y="602" width="361" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="yRe-tL-2dC"/>
                                 </constraints>
@@ -122,40 +122,87 @@
                                     <action selector="resultButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OHc-oj-51i"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6yv-M9-yN3">
+                                <rect key="frame" x="35" y="221" width="90" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="hmu-bi-5zl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Mst-GC-qKA">
+                                <rect key="frame" x="16" y="250" width="120" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="hWf-bo-vLv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PTv-DT-aMb">
+                                <rect key="frame" x="16" y="527" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="saveButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rw1-gZ-6ze"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="41M-mC-eex">
+                                <rect key="frame" x="91" y="527" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="resetButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pY2-Lm-e2d"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Mst-GC-qKA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="3zf-aq-guf"/>
                             <constraint firstItem="dMo-P7-wLl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="5pL-PX-9ni"/>
                             <constraint firstItem="Lxe-R0-yKX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="6DS-4G-rxR"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Vlf-SG-7dx" secondAttribute="trailing" constant="16" id="8BO-lY-cjs"/>
                             <constraint firstItem="nP7-hv-rXn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="9mC-Vj-LIk"/>
                             <constraint firstItem="zQY-da-IZA" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="CU7-tO-iMj"/>
                             <constraint firstItem="zQY-da-IZA" firstAttribute="top" secondItem="1gT-1K-bHa" secondAttribute="bottom" constant="128" id="Dcw-9X-Yua"/>
+                            <constraint firstItem="dMo-P7-wLl" firstAttribute="leading" secondItem="Mst-GC-qKA" secondAttribute="trailing" constant="110" id="FWT-Wb-IVM"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HTU-fw-OFY" secondAttribute="trailing" constant="16" id="G04-kq-2pP"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2wA-r9-u6S" secondAttribute="trailing" constant="16" id="IPZ-hL-ai8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Lxe-R0-yKX" secondAttribute="trailing" constant="16" id="Iut-TP-Lrw"/>
                             <constraint firstItem="HTU-fw-OFY" firstAttribute="top" secondItem="SoR-qG-Oda" secondAttribute="bottom" constant="8" id="KfD-UE-4kE"/>
                             <constraint firstItem="dMo-P7-wLl" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="28" id="M6e-Uf-TrC"/>
+                            <constraint firstItem="6yv-M9-yN3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="QES-gE-Jvw"/>
+                            <constraint firstItem="41M-mC-eex" firstAttribute="top" secondItem="HTU-fw-OFY" secondAttribute="bottom" constant="10" id="SUv-WE-yKp"/>
                             <constraint firstItem="2wA-r9-u6S" firstAttribute="top" secondItem="Vlf-SG-7dx" secondAttribute="bottom" constant="40" id="UIy-oO-47N"/>
+                            <constraint firstItem="41M-mC-eex" firstAttribute="leading" secondItem="PTv-DT-aMb" secondAttribute="trailing" id="WIN-GK-hRR"/>
+                            <constraint firstItem="PTv-DT-aMb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="YBi-cR-T5q"/>
                             <constraint firstItem="Lxe-R0-yKX" firstAttribute="top" secondItem="zQY-da-IZA" secondAttribute="bottom" constant="8" id="YW5-0N-Cnu"/>
                             <constraint firstItem="1gT-1K-bHa" firstAttribute="top" secondItem="nP7-hv-rXn" secondAttribute="bottom" constant="5" id="bch-Uv-I99"/>
                             <constraint firstItem="HTU-fw-OFY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="eaU-pL-hBe"/>
+                            <constraint firstItem="2wA-r9-u6S" firstAttribute="top" secondItem="PTv-DT-aMb" secondAttribute="bottom" constant="40" id="gMU-L9-zjB"/>
                             <constraint firstItem="nP7-hv-rXn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="gVR-dC-vdK"/>
                             <constraint firstItem="Vlf-SG-7dx" firstAttribute="top" secondItem="HTU-fw-OFY" secondAttribute="bottom" constant="10" id="kGN-oY-7OF"/>
                             <constraint firstItem="1gT-1K-bHa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="kym-tN-f0R"/>
+                            <constraint firstItem="Mst-GC-qKA" firstAttribute="top" secondItem="6yv-M9-yN3" secondAttribute="bottom" constant="8" id="l8x-1q-bC0"/>
                             <constraint firstItem="SoR-qG-Oda" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="ljd-sV-7cR"/>
+                            <constraint firstItem="PTv-DT-aMb" firstAttribute="top" secondItem="HTU-fw-OFY" secondAttribute="bottom" constant="10" id="lwd-Sm-Mli"/>
                             <constraint firstItem="2wA-r9-u6S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="tyv-iP-ZGX"/>
+                            <constraint firstItem="6yv-M9-yN3" firstAttribute="top" secondItem="1gT-1K-bHa" secondAttribute="bottom" constant="42" id="v2r-NH-E4k"/>
                             <constraint firstItem="SoR-qG-Oda" firstAttribute="top" secondItem="Lxe-R0-yKX" secondAttribute="bottom" constant="42" id="wLo-uW-JiD"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="question1" destination="zQY-da-IZA" id="gRa-nq-ld1"/>
                         <outlet property="question2" destination="SoR-qG-Oda" id="oD4-Jp-ehA"/>
+                        <outlet property="question3" destination="6yv-M9-yN3" id="GyR-gr-Vw0"/>
                         <outlet property="randomButton" destination="Vlf-SG-7dx" id="1dB-3l-eTq"/>
+                        <outlet property="resetButton" destination="41M-mC-eex" id="C03-xz-aoc"/>
                         <outlet property="resultButton" destination="2wA-r9-u6S" id="hKR-Id-de4"/>
+                        <outlet property="saveButton" destination="PTv-DT-aMb" id="5Ep-ps-z9e"/>
                         <outlet property="textField1" destination="Lxe-R0-yKX" id="Ejd-rB-fYP"/>
                         <outlet property="textField2" destination="rbm-6j-yWe" id="aZi-oO-FqR"/>
+                        <outlet property="textField3" destination="Mst-GC-qKA" id="u3R-XX-hvU"/>
                         <outlet property="title1" destination="nP7-hv-rXn" id="OgJ-wI-Jq6"/>
                         <outlet property="title2" destination="1gT-1K-bHa" id="56c-ex-QkC"/>
                         <outlet property="uiView" destination="HTU-fw-OFY" id="d6A-yj-qSf"/>
